--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -4,10 +4,10 @@
 	{% for post in posts %}
 	    <div class="post">
 	        <div class="date">
-	            {{ post.published_date }}
+	            created: {{ post.created_date|date:'d-m-Y' }}
 	        </div>
 	        <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-	        <p>{{ post.text|linebreaks }}</p>
+	        <p>{{ post.text|truncatechars:200 }}</p>
 	    </div>
 	{% endfor %}
-{% endblock content %}
+{% endblock %}
